--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -607,6 +607,10 @@
     "message": "Benutzerdefinierte URL in neuem privaten Fenster öffnen",
     "description": "Open custom URL in new private window"
   },
+  "commandLabelInsertCustomText": {
+    "message": "Benutzerdefinierten Text einfügen",
+    "description": "Insert custom text"
+  },
   "commandLabelPasteClipboard": {
     "message": "Zwischenablage einfügen",
     "description": "Paste clipboard"
@@ -955,6 +959,10 @@
     "message": "Öffnet die angegebene URL in einem neuen privaten Fenster.",
     "description": "Opens the specified URL in a new private window."
   },
+  "commandDescriptionInsertCustomText": {
+    "message": "Fügt einen festgelegten Text an der Cursorposition des Eingabeelements ein, auf dem die Geste begonnen wurde.",
+    "description": "Inserts the specified text at the caret position of the input element on which the gesture started."
+  },
   "commandDescriptionPasteClipboard": {
     "message": "Fügt den aktuellen Text der Zwischenablage an der Cursorposition des Eingabeelements ein, auf dem die Geste begonnen wurde.",
     "description": "Inserts the current clipboard text at the caret position of the input element on which the gesture started."
@@ -1159,6 +1167,10 @@
     "message": "Benutzerdefinierte URL",
     "description": "Custom URL"
   },
+  "commandSettingLabelCustomText": {
+    "message": "Benutzerdefinierter Text",
+    "description": "Custom text"
+  },
   "commandSettingLabelAddonId": {
     "message": "Add-on ID",
     "description": "Add-on ID"
@@ -1320,8 +1332,8 @@
     "description": "Determines if the tabs should be cycled through in a loop."
   },
   "commandSettingDescriptionExcludeDiscarded": {
-    "message": "Legt fest, ob nicht geladene Tabs übersprungen werden sollen.",
-    "description": "Determines if tabs that are not loaded should be skipped."
+    "message": "Legt fest, ob nicht geladene Tabs ignoriert werden sollen.",
+    "description": "Determines whether tabs that are not loaded should be ignored."
   },
   "commandSettingDescriptionOpenEmptyTab": {
     "message": "Legt fest, ob ein leerer Tab geöffnet werden soll, wenn keine URL oder kein Link ausgewählt wurde.",
@@ -1346,6 +1358,10 @@
   "commandSettingDescriptionCustomURL": {
     "message": "Die URL, die geöffnet werden soll.",
     "description": "The URL that should be opened."
+  },
+  "commandSettingDescriptionCustomText": {
+    "message": "Der Text oder die Zeichen, die eingefügt werden sollen.",
+    "description": "The text or symbols that should be inserted."
   },
   "commandSettingDescriptionAddonId": {
     "message": "Die ID des Add-ons, an das die Nachricht gesendet werden soll.",
